--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,61 @@
-.todo-app {
-  font-family: sans-serif;
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 
-.add-todo {
-  margin-left: 0.5rem;
+html {
+  box-sizing: border-box;
 }
 
+.App {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  width: max-content;
+  margin: 10vh auto 0;
+  border: 1px solid #a4b0be;
+  border-radius: 10px;
+  box-shadow: 5px 5px 10px 5px #a4b0be;
+  padding: 30px;
+  background-color: #f1f2f6;
+}
+
+h1 {
+  text-align: center;
+  color: #57606f;
+  letter-spacing: 2px;
+}
+
+/* form */
+.form-todo {
+  margin-top: 1rem;
+  display: flex;
+}
+
+.form-todo > input {
+  padding: 10px;
+  font-size: 20px;
+  border: 1.5px #ff6b81 ridge;
+  border-radius: 10px;
+}
+
+.form-todo > button {
+  font-size: 16px;
+  letter-spacing: 1px;
+  padding: 10px;
+  border: none;
+  background-color: #7ed6df;
+  margin-left: 1rem;
+  border-radius: 10px;
+  transition: 0.5s all;
+}
+
+.form-todo > button:hover {
+  background-color: #22a6b3;
+}
+
+/* list */
 .todo-list {
   margin-top: 1rem;
   text-align: left;
@@ -13,15 +63,35 @@
 }
 
 .todo-item {
+  font-size: 20px;
   font-family: monospace;
   cursor: pointer;
-  line-height: 1.5;
-}
-.todo-item__text--completed {
-  text-decoration: line-through;
-  color: lightgray;
+  padding: 10px 0;
+  background-color: #dfe4ea;
 }
 
+.todo-item:first-of-type {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.todo-item:last-of-type {
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.todo-item:nth-child(even) {
+  background-color: #ced6e0;
+}
+
+.todo-item__text--completed {
+  text-decoration: line-through;
+  opacity: 0.5;
+}
+
+/* filter */
+.filters {
+  padding: 2rem 0 0;
+}
 .filter {
   padding: 0.3rem 0;
   margin: 0 0.3rem;
